--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,7 +40,7 @@ header {
   min-height: 150px;
   width: 100%;
   color: white;
-  background-color: #ff8b00;
+  background-color: #35145B;
 }
 
 .header-title {
@@ -48,7 +48,7 @@ header {
 }
 
 .header-content {
-  background-color: #ff8b00;
+  background-color: #35145B;
 }
 
 .header-links {
@@ -74,14 +74,6 @@ header {
   /* color: #fff; */
   color: #feffff;
   cursor: default;
-}
-
-#download-on-github {
-  float: right;
-  font-size: 24px;
-  padding: 10px 40px;
-  margin: 35px 0;
-  border-bottom: 6px solid #ccc;
 }
 
 #top-shadow {
@@ -130,10 +122,10 @@ header {
 -------------------------------------------------- */
 #firechat-container {
   height: 475px;
-  max-width: 325px;
+  width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
-  background-color: #fff;
+  background-color: white;
   margin: auto auto;
   text-align: center;
   -webkit-border-radius: 4px;
@@ -234,35 +226,11 @@ footer {
   margin-bottom: 20px;
 }
 
-#powered-by-firebase {
-  display: inline-block;
-  height: 34px;
-  width: 129px;
-  background: url('../images/powered-by-firebase-dim.png') no-repeat center;
-}
-
-#powered-by-firebase:hover {
-  background: url('../images/powered-by-firebase.png') no-repeat center;
-}
-
-#footer-links a {
-  font-size: 14px;
-  color: #999;
-  text-decoration: none;
-  margin: 0 20px;
-  display: inline-block;
-}
-
-#footer-links a:hover {
-  text-decoration: underline;
-  color: #333;
-}
-
 
 /* index.html
 -------------------------------------------------- */
 .home-page {
-  background-color: #f4f4f4;
+  background-color: #35145B;
 }
 
 .home-page #top-content {
